--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,45 +1,18 @@
 //----------------------------------*\
-// SCSS MIXINS
+// Reset
 //----------------------------------*/
-
-@import 'mixins/_position.scss';
+@import 'vendor/_normalize.scss';
 
 //----------------------------------*\
-// CONFIG MODULES
+// Global Styling
 //----------------------------------*/
-
-// Config modules
-@import 'modules/_vars.scss';
-@import 'modules/_clearfix.scss';
-@import 'modules/_defaults.scss';
-@import 'modules/_normalize.scss';
-//----------------------------------*\
-// PARTIALS
-//----------------------------------*/
-
-@import 'partials/_header.scss';
-@import 'partials/_nav.scss';
-@import 'partials/_sidebar.scss';
-@import 'partials/_main.scss';
-@import 'partials/_footer.scss';
+@import '_variables.scss';
+@import '_general.scss';
+@import '_typography.scss';
+@import '_inputs.scss';
 
 //----------------------------------*\
-// OBJECTS & MODULES
+// Custom Page Styling
 //----------------------------------*/
+@import 'pages/_home.scss';
 
-@import 'modules/_buttons.scss';
-@import 'modules/_inputs.scss';
-@import 'modules/_lists.scss';
-@import 'modules/_typography.scss';
-@import 'modules/_misc.scss';
-@import 'modules/_app.scss';
-
-// Enhancement modules
-@import 'modules/_breakpoints.scss';
-@import 'modules/_print.scss';
-
-//----------------------------------*\
-// VENDOR
-//----------------------------------*/
-
-@import 'vendor/_external.scss';
