--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -17,3 +17,14 @@ body,html{
     overflow: hidden;
 }
 
+p {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Osp-Din', sans-serif;
+}
+
+a {
+  font-family: 'Osp-Din', sans-serif; 
+}
